# voice-of-drawing

./: .gitignore  LICENSE  README.md  config.py  database.py  main.py  poem_library.py  pyproject.toml
agents/: besteci.py  gorsel_analist.py  sair.py  ses_veren.py
scripts/: yedek_uret.py
static/: app.js  index.html  style.css
